[gd_scene load_steps=2 format=2]

[ext_resource path="res://entidades/player/Interface.gd" type="Script" id=1]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progresso_stamina" type="ProgressBar" parent="."]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progresso_vida" type="ProgressBar" parent="."]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamina" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -528.0
margin_right = 105.0
margin_bottom = -514.0
text = "Stamina:"

[node name="vida" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -563.0
margin_right = 105.0
margin_bottom = -549.0
text = "Vida:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progresso_boss" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 7.0
margin_right = 250.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}
